Acabat exemple del criteri de Raabe. Tinc un dilema amb la convergència quan alpha=e

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -134,6 +134,7 @@
 \newcommand{\tancat}[1]{\obert{#1}}
 \newcommand{\base}[1]{\mathcal{#1}}
 \newcommand{\diff}{\textrm{d}}
+\newcommand{\e}{\textrm{e}}
 
 %\setcounter{chapter}{-1}
 
