--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -224,9 +224,9 @@
 		\labelname{Teorema de la doble inclusió}\label{thm:doble inclusió}
 		Siguin \(A\) i \(B\) dos conjunts. Aleshores \(A=B\) si i només si \(A\subseteq B\) i \(B\subseteq A\).
 		\begin{proof}
-			Comencem veient que la condició és necessària (\(\implica\)). Suposem doncs que \(A\subseteq B\) i \(B\subseteq A\). Per la definició de \myref{def:subconjunt} tenim que si \(x\in A\) aleshores \(x\in B\), ja que per hipòtesi \(A\subset B\). De mateixa manera tenim que si \(x\in B\) aleshores \(x\in A\), ja que per hipòtesi \(B\subseteq A\). Per tant, per l'\myref{axiom:axioma d'extensionalitat} tenim que \(A=B\).
+			Comencem veient que la condició és suficient (\(\implicatper\)). Suposem doncs que \(A\subseteq B\) i \(B\subseteq A\). Per la definició de \myref{def:subconjunt} tenim que si \(x\in A\) aleshores \(x\in B\), ja que per hipòtesi \(A\subset B\). De mateixa manera tenim que si \(x\in B\) aleshores \(x\in A\), ja que per hipòtesi \(B\subseteq A\). Per tant, per l'\myref{axiom:axioma d'extensionalitat} tenim que \(A=B\).
 			
-			Veiem ara que la condició és suficient (\(\implicatper\)). Suposem doncs que \(A=B\). Tenim que si \(x\in A\), aleshores \(x\in B\), i per la definició de \myref{def:subconjunt} això és que \(A\subseteq B\). De mateixa manera, si \(x\in B\) tenim \(x\in A\), i de nou per la definició de \myref{def:subconjunt} tenim que \(B\subseteq A\), com volíem veure.
+			Veiem ara que la condició és necessària (\(\implica\)). Suposem doncs que \(A=B\). Tenim que si \(x\in A\), aleshores \(x\in B\), i per la definició de \myref{def:subconjunt} això és que \(A\subseteq B\). De mateixa manera, si \(x\in B\) tenim \(x\in A\), i de nou per la definició de \myref{def:subconjunt} tenim que \(B\subseteq A\), com volíem veure.
 		\end{proof}
 	\end{theorem}
 	\begin{axiom}[Axioma del Conjunt Potència]
