--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -204,7 +204,7 @@
 			Definim
 			\begin{equation}
 				\label{prop:condició equivalent a base d'una topologia:eq1}
-				\tau=\left\{\obert{U}\subseteq X\mid\obert{U}=\bigcup_{i\in I}B_{i}\subseteq\base{B}\right\}
+				\tau=\left\{\obert{U}\subseteq X\mid\obert{U}=\bigcup_{i\in I}B_{i}\text{ amb }B_{i}\in\base{B}\right\}
 			\end{equation}
 			Observem que \(X\) i \(\emptyset\) pertanyen a \(\tau\).
 			
@@ -455,5 +455,6 @@
 %	\subsection{Connexió}
 %	\subsection{Varietats}
 %	\subsection{Teorema de classificació de les superfícies compactes}
-	\printbibliography
+	
+%	\printbibliography
 \end{document}
