Reestrcturat EDOS i arreglat alguns errors d'anàlisi

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -113,6 +113,7 @@
 \DeclareMathOperator{\sig}{sig}
 \DeclareMathOperator{\interior}{Int}
 \DeclareMathOperator{\clausura}{Cl}
+\DeclareMathOperator{\distancia}{d}
 
 \let\ker\relax
 \DeclareMathOperator*{\ker}{ker}
